--- a/news_summary_multilang.html
+++ b/news_summary_multilang.html
@@ -1,5 +1,3 @@
-<!-- هیچ تغییری در ساختار کلی داده نشده، فقط بخش fetchSourceNames اصلاح شده است -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,7 +22,7 @@
         <option value="all">All Categories</option>
       </select>
     </div>
-    
+
     <div id="news-container" class="space-y-6"></div>
     <div id="pagination-nav" class="mt-6"></div>
   </div>
@@ -39,13 +37,12 @@
 
     async function fetchNews() {
       let newsIds = [];
-
       if (selectedCategory !== 'all') {
-        const catRelRes = await fetch(`https://tdvimwqotnuvcdvhvbjj.supabase.co/rest/v1/fetched_news_categories?category_id=eq.${selectedCategory}`, {
+        const relRes = await fetch(`https://tdvimwqotnuvcdvhvbjj.supabase.co/rest/v1/fetched_news_categories?category_id=eq.${selectedCategory}`, {
           headers: { 'apikey': API_KEY }
         });
-        const catRelations = await catRelRes.json();
-        newsIds = [...new Set(catRelations.map(r => r.news_id))];
+        const rel = await relRes.json();
+        newsIds = [...new Set(rel.map(r => r.news_id))];
         if (newsIds.length === 0) {
           renderNews([]);
           renderPagination(0);
@@ -53,14 +50,14 @@
         }
       }
 
-      const countRes = await fetch(`https://tdvimwqotnuvcdvhvbjj.supabase.co/rest/v1/fetched_news${newsIds.length > 0 ? `?id=in.(${newsIds.join(',')})` : ''}`, {
+      const countRes = await fetch(`https://tdvimwqotnuvcdvhvbjj.supabase.co/rest/v1/fetched_news${newsIds.length ? `?id=in.(${newsIds.join(',')})` : ''}`, {
         headers: { 'apikey': API_KEY, 'Prefer': 'count=exact' }
       });
       const total = parseInt(countRes.headers.get('content-range')?.split('/')?.[1] || '0');
       totalPages = Math.ceil(total / pageSize);
 
       let query = `https://tdvimwqotnuvcdvhvbjj.supabase.co/rest/v1/fetched_news?order=publish_date.desc&limit=${pageSize}&offset=${(currentPage - 1) * pageSize}`;
-      if (newsIds.length > 0) query += `&id=in.(${newsIds.join(',')})`;
+      if (newsIds.length) query += `&id=in.(${newsIds.join(',')})`;
 
       const res = await fetch(query, { headers: { 'apikey': API_KEY } });
       const data = await res.json();
@@ -72,10 +69,7 @@
     function renderCategoryOptions(categories) {
       const select = document.getElementById("category-select");
       const labels = {
-        en: 'All Categories',
-        fa: 'همه دسته‌ها',
-        tr: 'Tüm Kategoriler',
-        ru: 'Все категории'
+        en: 'All Categories', fa: 'همه دسته‌ها', tr: 'Tüm Kategoriler', ru: 'Все категории'
       };
       select.innerHTML = `<option value="all">${labels[currentLang]}</option>`;
       for (const cat of categories) {
@@ -96,28 +90,26 @@
         const date = item.publish_date?.split('T')[0] || '';
 
         const div = document.createElement('div');
-        div.className = `bg-white shadow rounded-xl flex overflow-hidden ${currentLang === 'fa' ? 'lang-fa' : ''}`;
+        div.className = `bg-white shadow rounded-xl p-4 space-y-3 ${currentLang === 'fa' ? 'lang-fa' : ''}`;
         div.innerHTML = `
-          <div class="w-48 h-36 flex-shrink-0">
-            <img src="${item.image_url || 'https://via.placeholder.com/150'}" alt="" class="object-cover w-full h-full">
-          </div>
-          <div class="flex-1 p-4 flex flex-col justify-between">
-            <div>
+          <div class="flex flex-col sm:flex-row sm:items-center gap-4">
+            <div class="w-full sm:w-48 flex-shrink-0">
+              <img src="${item.image_url || 'https://via.placeholder.com/150'}" class="object-cover w-full h-36 rounded" />
+            </div>
+            <div class="flex-1">
               <h2 class="text-xl font-semibold text-gray-800 mb-1">${title}</h2>
-              <p class="text-gray-500 text-sm mb-2">
-                ${currentLang === 'fa' ? 'تاریخ انتشار' : 'Published'}:
-                <span class="font-medium text-gray-700">${date}</span>
-                · ${currentLang === 'fa' ? 'منبع' : 'Source'}:
-                <span class="font-medium text-gray-700">${source}</span>
-              </p>
-              <p class="text-gray-700 text-sm leading-relaxed">${summary}</p>
-            </div>
-            <div class="mt-3">
-              <a href="${item.source_url}" target="_blank" class="inline-block text-sm text-blue-600 hover:underline">
-                ${currentLang === 'fa' ? 'مشاهده کامل خبر ←' : 'Read full article →'}
-              </a>
             </div>
           </div>
+          <div class="text-sm text-gray-600">
+            ${currentLang === 'fa' ? 'تاریخ انتشار' : 'Published'}:
+            <span class="font-medium text-gray-800">${date}</span>
+            · ${currentLang === 'fa' ? 'منبع' : 'Source'}:
+            <span class="font-medium text-gray-800">${source}</span>
+          </div>
+          <p class="text-sm text-gray-700 leading-relaxed">${summary}</p>
+          <a href="${item.source_url}" target="_blank" class="inline-block text-sm text-blue-600 hover:underline">
+            ${currentLang === 'fa' ? 'مشاهده کامل خبر ←' : 'Read full article →'}
+          </a>
         `;
         container.appendChild(div);
       }
@@ -132,34 +124,32 @@
     }
 
     async function fetchSourceNames(news) {
-      const sourceIds = [...new Set(news.map(n => n.source_id).filter(Boolean))];
-      if (sourceIds.length === 0) return news;
+      const ids = [...new Set(news.map(n => n.source_id).filter(Boolean))];
+      if (!ids.length) return news;
 
-      const res = await fetch(`https://tdvimwqotnuvcdvhvbjj.supabase.co/rest/v1/news_sources?id=in.(${sourceIds.join(',')})`, {
+      const res = await fetch(`https://tdvimwqotnuvcdvhvbjj.supabase.co/rest/v1/news_sources?id=in.(${ids.join(',')})`, {
         headers: { 'apikey': API_KEY }
       });
-
       const sources = await res.json();
-      const sourceMap = {};
+      const map = {};
       for (const s of sources) {
-        sourceMap[s.id] = s.name_original; // ✅ فقط name_original
+        map[s.id] = s.name_original;
       }
-
-      return news.map(n => ({ ...n, source_name: sourceMap[n.source_id] || 'Unknown' }));
+      return news.map(n => ({ ...n, source_name: map[n.source_id] || 'Unknown' }));
     }
 
     function changeLang(lang) {
       currentLang = lang;
       currentPage = 1;
-      const currentValue = document.getElementById("category-select").value;
+      const cat = document.getElementById("category-select").value;
       fetchCategories().then(() => {
-        document.getElementById("category-select").value = currentValue;
+        document.getElementById("category-select").value = cat;
         fetchNews();
       });
     }
 
-    function changeCategory(catId) {
-      selectedCategory = catId;
+    function changeCategory(id) {
+      selectedCategory = id;
       currentPage = 1;
       fetchNews();
     }
@@ -168,9 +158,8 @@
       const nav = document.getElementById("pagination-nav");
       nav.innerHTML = '';
       if (totalPages <= 1) return;
-
-      const wrapper = document.createElement("div");
-      wrapper.className = "flex justify-center mt-6 flex-wrap gap-2";
+      const wrap = document.createElement("div");
+      wrap.className = "flex justify-center mt-6 gap-2 flex-wrap";
 
       const buttons = [
         { text: '«', page: 1 },
@@ -180,21 +169,20 @@
         { text: '»', page: totalPages }
       ];
 
-      buttons.forEach(btn => {
+      for (const b of buttons) {
         const el = document.createElement("button");
-        el.innerText = btn.text;
-        el.className = `px-3 py-1 rounded ${btn.isCurrent ? 'bg-white border' : 'bg-gray-200'}`;
-        el.disabled = btn.page < 1 || btn.page > totalPages || (btn.page === currentPage && !btn.isCurrent);
-        el.onclick = () => changePage(btn.page);
-        wrapper.appendChild(el);
-      });
-
-      nav.appendChild(wrapper);
+        el.innerText = b.text;
+        el.className = `px-3 py-1 rounded ${b.isCurrent ? 'bg-white border' : 'bg-gray-200'}`;
+        el.disabled = b.page < 1 || b.page > totalPages || (b.page === currentPage && b.isCurrent);
+        el.onclick = () => changePage(b.page);
+        wrap.appendChild(el);
+      }
+      nav.appendChild(wrap);
     }
 
-    function changePage(page) {
-      if (page >= 1 && page <= totalPages) {
-        currentPage = page;
+    function changePage(p) {
+      if (p >= 1 && p <= totalPages) {
+        currentPage = p;
         fetchNews();
       }
     }
