--- a/Selin - Virtual Agent.html
+++ b/Selin - Virtual Agent.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>D-ID Agent Fullscreen</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Selin – Legal AI Agent</title>
   <style>
     html, body {
       margin: 0;
@@ -12,18 +12,23 @@
       width: 100%;
       overflow: hidden;
     }
-
-    iframe {
-      width: 100vw;
-      height: 100vh;
-      border: none;
-      display: block;
-    }
   </style>
 </head>
 <body>
 
-  <iframe src="agent.html"></iframe>
+  <!-- جای‌گذاری آواتار D-ID در این عنصر -->
+  <div id="did-agent-container"></div>
+
+  <!-- اسکریپت D-ID با تنظیمات کامل -->
+  <script type="module"
+    src="https://agent.d-id.com/v2/index.js"
+    data-mode="full"
+    data-client-key="Z29vZ2xlLW9hdXRoMnwxMTc2NDQxNDgzODkzNDQxNzIxNjc6RExqZ1huS0RqamxKOFNuV1pycmNJ"
+    data-agent-id="v2_agt_s2zt8n2S"
+    data-name="did-agent"
+    data-monitor="true"
+    data-target-id="did-agent-container">
+  </script>
 
 </body>
 </html>
