--- a/SelinVirtualAgent.html
+++ b/SelinVirtualAgent.html
@@ -20,15 +20,16 @@
   <div id="did-agent-container"></div>
 
   <!-- اسکریپت D-ID با تنظیمات کامل -->
-  <script type="module"
-    src="https://agent.d-id.com/v2/index.js"
-    data-mode="full"
-    data-client-key="Z29vZ2xlLW9hdXRoMnwxMTc2NDQxNDgzODkzNDQxNzIxNjc6RExqZ1huS0RqamxKOFNuV1pycmNJ"
-    data-agent-id="v2_agt_s2zt8n2S"
-    data-name="did-agent"
-    data-monitor="true"
-    data-target-id="did-agent-container">
-  </script>
+<script type="module"
+      src="https://agent.d-id.com/v2/index.js"
+      data-mode="full"
+      data-client-key="Z29vZ2xlLW9hdXRoMnwxMTc2NDQxNDgzODkzNDQxNzIxNjc6RExqZ1huS0RqamxKOFNuV1pycmNJ"
+      data-agent-id="v2_agt_s2zt8n2S"
+      data-name="did-agent"
+      data-monitor="true"
+      data-target-id="<PLACE_YOUR_DIV_ID_HERE>">
+</script>
 
 </body>
 </html>
+
