--- a/SelinVirtualAgent.html
+++ b/SelinVirtualAgent.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Selin – Legal AI Agent</title>
+  <title>Selin – Virtual Legal Agent</title>
   <style>
     html, body {
       margin: 0;
@@ -16,20 +16,17 @@
 </head>
 <body>
 
-  <!-- جای‌گذاری آواتار D-ID در این عنصر -->
   <div id="did-agent-container"></div>
 
-  <!-- اسکریپت D-ID با تنظیمات کامل -->
-<script type="module"
-      src="https://agent.d-id.com/v2/index.js"
-      data-mode="full"
-      data-client-key="Z29vZ2xlLW9hdXRoMnwxMTc2NDQxNDgzODkzNDQxNzIxNjc6RExqZ1huS0RqamxKOFNuV1pycmNJ"
-      data-agent-id="v2_agt_s2zt8n2S"
-      data-name="did-agent"
-      data-monitor="true"
-      data-target-id="<PLACE_YOUR_DIV_ID_HERE>">
-</script>
+  <script type="module"
+    src="https://agent.d-id.com/v2/index.js"
+    data-mode="full"
+    data-client-key="Z29vZ2xl... (کلید جدید شما)"
+    data-agent-id="v2_agt_s2zt8n2S"
+    data-name="did-agent"
+    data-monitor="true"
+    data-target-id="did-agent-container">
+  </script>
 
 </body>
 </html>
-
