--- a/SelinVirtualAgent.html
+++ b/SelinVirtualAgent.html
@@ -16,12 +16,14 @@
 </head>
 <body>
 
+  <!-- این div محل نمایش آواتار خواهد بود -->
   <div id="did-agent-container"></div>
 
+  <!-- اسکریپت اصلی با شناسه صحیح -->
   <script type="module"
     src="https://agent.d-id.com/v2/index.js"
     data-mode="full"
-    data-client-key="Z29vZ2xl... (کلید جدید شما)"
+    data-client-key="Z29vZ2xlLW9hdXRoMnwxMTc2NDQxNDgzODkzNDQxNzIxNjc6RExqZ1huS0RqamxKOFNuV1pycmNJ"
     data-agent-id="v2_agt_s2zt8n2S"
     data-name="did-agent"
     data-monitor="true"
