--- a/SelinVirtualAgent.html
+++ b/SelinVirtualAgent.html
@@ -16,10 +16,10 @@
 </head>
 <body>
 
-  <!-- این div محل نمایش آواتار خواهد بود -->
+  <!-- حتماً این div با همین id باید وجود داشته باشه -->
   <div id="did-agent-container"></div>
 
-  <!-- اسکریپت اصلی با شناسه صحیح -->
+  <!-- این اسکریپت باید دقیقا این target-id رو داشته باشه -->
   <script type="module"
     src="https://agent.d-id.com/v2/index.js"
     data-mode="full"
